# include_dir

.github/workflows/: ci.yaml
include_dir/: Cargo.toml
include_dir/examples/: include_dir.rs
include_dir/src/: file.rs  lib.rs
include_dir/tests/: integration_test.rs
include_dir_impl/: Cargo.toml
include_dir_impl/src/: dir.rs  file.rs  lib.rs
