[package]
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
name = "trillium-include-dir"
version = "0.1.0"
description = "temporary fork of the include_dir crate for use in trillium.rs"
license = "MIT"
readme = "../README.md"
keywords = ["assets", "include", "embed", "dir"]
repository = "https://github.com/jbr/include_dir"
categories = ["development-tools", "web-programming"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[dependencies]
glob = { version = "0.3", optional = true }
proc-macro-hack = "0.5"
trillium-include-dir-impl = { version = "=0.1.0", path = "../include_dir_impl" }

[dev-dependencies]
tempdir = "0.3"

[features]
default = ["search"]
example-output = []
search = ["glob"]
