[package]
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
name = "trillium-include-dir"
version = "0.1.0"
description = "temporary fork of the include_dir crate for use in trillium.rs"
license = "MIT"
readme = "../README.md"
keywords = ["assets", "include", "embed", "dir"]
repository = "https://github.com/jbr/include_dir"
categories = ["development-tools", "web-programming"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[dependencies]
glob = { version = "0.3.0", optional = true }
trillium-include-dir-impl = { version = "=0.1.1", path = "../include_dir_impl" }

[dev-dependencies]
tempdir = "0.3.7"

[features]
default = ["search"]
example-output = []
search = ["glob"]
