[package]
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
name = "trillium-include-dir-impl"
version = "0.1.0"
description = "temporary fork of the include_dir_impl crate for use in trillium.rs"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jbr/include_dir"
edition = "2021"

[badges.appveyor]
branch = "master"
repository = "Michael-F-Bryan/include-dir"
service = "github"

[badges.travis-ci]
branch = "master"
repository = "Michael-F-Bryan/include_dir"

[dependencies]
proc-macro-hack = "0.5"
syn = "1"
quote = "1"
anyhow = "1.0"
proc-macro2 = "1"

[lib]
proc-macro = true
