[package]
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
name = "trillium-include-dir-impl"
version = "0.1.0"
description = "temporary fork of the include_dir_impl crate for use in trillium.rs"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jbr/include_dir"
edition = "2021"

[dependencies]
syn = "1.0.82"
quote = "1.0.10"
proc-macro2 = "1.0.32"

[lib]
proc-macro = true
